# WebLauncher

./: .gitignore  NPU_API.md  NPU_CAMERA_PIPELINE.md  NPU_OPTIMIZATION.md  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rknn_jni.cpp
app/src/main/java/com/example/weblauncher/: AppAdapter.java  LauncherActivity.java  WebActivity.java  WebApp.java
app/src/main/java/com/example/weblauncher/npu/: CameraInferenceManager.java  HandInference.java  NpuHttpServer.java  NpuInferenceService.java  NpuWebSocketServer.java  RknnInference.java
app/src/main/res/drawable/: bg_app_item.xml
app/src/main/res/layout/: activity_launcher.xml  dialog_add.xml  item_app.xml
app/src/main/res/values/: themes.xml
